force-app/main/default/objects/Follow_up__c/Follow_up__c.object-meta.xml
<CustomObject>
    <label>Follow-up</label>
    <nameField>
        <label>Follow-up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow-ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>