force-app/main/default/objects/Follow_up__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Follow-ups</relationshipLabel>
    <relationshipName>Follow_ups</relationshipName>
    <type>Lookup</type>
</CustomField>