force-app/main/default/objects/Follow_up__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Follow-ups</relationshipLabel>
    <relationshipName>Follow_ups</relationshipName>
    <type>Lookup</type>
</CustomField>