force-app/main/default/objects/Follow_up__c/fields/Cometics_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Cometics_Follow_Up__c</fullName>
    <label>Cometic FollowUp details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>